Frontend: Changed logo, modified public subdirectory

--- a/Application Code/Myproject/frontend/public/index.html
+++ b/Application Code/Myproject/frontend/public/index.html
@@ -28,7 +28,7 @@
     src="https://kit.fontawesome.com/64d58efce2.js"
     crossorigin="anonymous"
   ></script>
-    <title>React App</title>
+    <title>Matix Engine</title>
   </head>
   <body>
 
